[package]
name = "better-panic"
version = "0.3.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>", "Joel Höner <athre0z@zyantific.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/mitsuhiko/better-panic"
description = "Pretty panic backtraces inspired by Python's tracebacks."
readme = "README.md"
keywords = [
    "panic",
    "backtrace",
    "stacktrace",
    "color",
    "pretty",
]

[dependencies]
backtrace = "0.3.37"
console = { version = "0.15.0", default-features = false }
syntect = { version = "4.6.0", optional = true }
